--- a/css/cardslider.css
+++ b/css/cardslider.css
@@ -38,6 +38,10 @@
   margin-bottom: 20px;
 }
 .card-list .card-item .message-button {
+  display: inline-flex;
+  align-items: center;
+  white-space: nowrap;
+  gap: 0.5rem;
   margin-top: 10px;
   padding: 10px 35px;
   color: rgba(252, 252, 249, 1);
