--- a/css/cardslider.css
+++ b/css/cardslider.css
@@ -33,6 +33,7 @@
   margin-bottom: 10px;
 }
 .card-list .card-item .user-profession {
+  text-align: center;
   font-size: 0.9rem;
   color: rgba(98, 108, 113, 1);
   margin-bottom: 20px;
